# crafterlib

./: CREDITS.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: future_plans.md  style.md
examples/: minecraft_crafting_grid.py  minecraft_craftingmath.py  minecraft_craftingmath_craftable.py  minecraft_fuelConverter.py  minecraft_graph.py  minecraft_recipe_chain.py  minecraft_recipes.py
src/crafterlib/: __init__.py  crafting_data.py  crafting_grid.py  item.py  loader.py  mob.py  recipe.py
src/crafterlib/craftutils/: __init__.py  amount_craftable_with.py  amount_needed_for.py  crafting_plan.py  fuel_conversion.py  possible_products.py  recipe_chain.py  recyclables.py  resources_adv.py  resources_basic.py  resources_intermed.py
src/crafterlib/data/games/minecraft/: crafting_grids.json  fuels.json  machines.json  mobs.json  recipes.json  recipes_potions.json  resources.json  root.json  tools.json
src/crafterlib/graph/: __init__.py  item_graph.py
test_data/games/test_game/: crafting_grids.json  recipes.json  root.json
test_data/games/test_game2/: items.json  recipes.json  root.json
test_data/games/test_game3/: items.json  recipes.json  root.json
test_data/games/test_multiple_ingredients/: items.json  recipes.json  root.json
test_data/games/test_single_ingredient/: recipes.json
tests/: __init__.py  test_crafting_grid.py  test_item.py  test_item_graph.py  test_loader.py  test_mob.py  test_recipe.py
tests/craftutils/: test_amt_craftable_with.py  test_amt_needed_for.py  test_fuel_conversion  test_recipe_chain.py
