[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crafterlib"
version = "0.2.1"
description = "Library for game crafting math"
readme = "README.md"
authors = [{name = "Jacob Farnsworth", email = "jacob.farnsworth97@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.2"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[project.urls]
"Source" = "https://github.com/JFarNTIG/crafterlib"

[tool.setuptools.package-dir]
# Enables the src/ layout
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["crafterlib*"]

[tool.setuptools.package-data]
"crafterlib.data" = ["games/**/*.json"]